--- a/proyectoreact/src/components/NavBar/NavBar.css
+++ b/proyectoreact/src/components/NavBar/NavBar.css
@@ -24,7 +24,7 @@ ul {
     margin-left: 25rem;
     margin-right: 25rem;
 }
-h1 {
+.marca {
     font-family: "Atomic Age", cursive;
     font-size: 4rem;
 }
