--- a/proyectoreact/src/components/ItemDetail/ItemDetail.css
+++ b/proyectoreact/src/components/ItemDetail/ItemDetail.css
@@ -1,11 +1,12 @@
-.productos {
+.detalle-productos {
     display: flex;
     align-items: center;
     justify-content: center;
     color: antiquewhite;
     margin-top:6rem;
 }
-.productos h2 {
+
+.detalle-productos h2 {
     font-size: 3.3rem;
     width: 80rem;
     text-align: center;
@@ -14,13 +15,15 @@
     left: 10rem;
     bottom: 5rem;
 }
-.productos img {
+
+.detalle-productos img {
     width: 50vh;
     height: 50vh;
     margin-top: 4rem;
     margin-left: 15rem;
 }
-.productos h3 {
+
+.detalle-productos h3 {
     font-size: 4rem;
     margin-top: 2rem;
     text-align: center;
@@ -29,13 +32,27 @@
     color: #3681da;
 }
 
-.productos h4 {
+.detalle-productos h4 {
     font-size: 3.5rem;
     margin-top: 2rem;
     text-align: center;
     margin-top: 5rem;
     position: relative;
     left: 10rem;
+}
+
+.detalle-productos h5 {
+    font-size: 3.5rem;
+    margin-top: 2rem;
+    text-align: center;
+    margin-top: 2rem;
+    position: relative;
+    left: 10rem;
+    color: #3681da;
+}
+
+.card-detalle {
+    background-color: white;
 }
 
 .texto {
